Sales Cloud & Service Cloud Timeline/force-app/main/default/objects/OpportunityStage_Tracker__c/OpportunityStage_Tracker__c.object-meta.xml
<CustomObject>
    <description>This Objects tracks the stage changes involved with opportunities</description>
    <label>OpportunityStage_Tracker</label>
    <nameField>
        <label>Opportunity RecordId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpportunityStage_Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>