Sales Cloud & Service Cloud Timeline/force-app/main/default/objects/OpportunityStage_Tracker__c/fields/Change_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Change_Date_and_Time__c</fullName>
    <description>This indicates the time when the stage change is made</description>
    <label>Change Date and Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>