Sales Cloud & Service Cloud Timeline/force-app/main/default/objects/OpportunityStage_Tracker__c/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <label>Current Stage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>