Sales Cloud & Service Cloud Timeline/force-app/main/default/objects/OpportunityStage_Tracker__c/fields/Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage__c</fullName>
    <description>This indicates the previous stage of opportunity</description>
    <label>Previous_Stage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>